--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-matplotlib==3.8.4
-numpy==1.26.4
-opencv-python==4.9.0.80
-Pillow==10.3.0
-scipy==1.13.0
+opencv-python
+mediapipe
+numpy
+scipy
+matplotlib
+tk
+Pillow
